--- a/_posts/2024-12-05-加权线性回归.md
+++ b/_posts/2024-12-05-加权线性回归.md
@@ -1,6 +1,6 @@
 ---
 title: 加权线性回归
-description: 加权线性回归是什么、它与线性回归的差别，以及参数求解；加权线性回归应该如何有效地加权？如何确保权重的正确性？实现独立同分布确保有效加权。
+description: 加权线性回归是什么、它与线性回归的差别，以及参数求解；加权线性回归应该如何有效地加权？如何确保权重的正确性？实现独立同分布确保R包中的 `lm()`有效加权。
 author: tangb
 date: 2024-12-06 11:33:00 +0800
 categories: [模型, 线性模型]
@@ -9,18 +9,6 @@ pin: true
 math: true
 mermaid: true
 ---
-
-这是一篇自我疑惑解答的博客，我写完整理后希望也可以帮到和我有一样疑惑的人，这篇博客包含的内容简要：
-
-- 加权线性回归是什么、它与线性回归的差别，以及参数求解；
-- 加权线性回归应该如何有效地加权？如何确保权重的正确性？
-  - 列举了两个需要加权的数值例子；
-  - 探讨如何有效加权；
-- 总结：确保满足同分布特性实现有效加权（针对R包中的 `lm()`）
-
-## 1 加权线性回归与普通线性回归
-
-### 普通线性回归
 
 对于 $N$ 个观测数据
 
@@ -40,9 +28,9 @@ $$
 J(\beta,\theta) = \frac{1}{N} \sum_{i=1}^N (y_i - \beta X_i - \theta)^2
 $$
 
-最小的 $\hat \beta,\hat \theta$，使得拟合曲线尽可能地接近所有的观测点。
+最小的 $\hat \beta,\hat \theta$，使得拟合曲线尽可能地接近所有的观测点，这就是**一般的线性回归**。
 
-### 加权线性回归
+## 加权线性回归
 
 但在实际应用中，观测点之间可能是由差异的。比如，有的观测点误差大，有的观测点误差小，这就需要让拟合直线 $y = \beta X + \theta$ 优先拟合误差较小的观测点。这时我们就可以使用一个权重系数 $w_i$ 来表示第 $i$ 个观测点的权重 (例如，对于误差小的观测点，$w_i$ 的值更大) 考虑了这个权重系数的 $w_i$ 的线性回归，就是加权线性回归。
 
@@ -54,9 +42,9 @@ $$
 
  这样，我们在寻找最优 $\beta,\theta$ 时，就可以更多地考虑高权重的观测值。
 
-## 2 参数求解
+## 参数求解
 
-这里不考虑太难的了，就考虑一个自变量 $x_i$ 理解求解过程就好了:
+这里以一个自变量 $x_i$ 理解求解过程为例:
 
 $$
 \hat \beta, \hat \theta = arg\min_{\hat \beta,\hat \theta} J(\beta,\theta)
@@ -69,7 +57,7 @@ $$
 \frac{\partial J}{\partial \theta}  = 0
 $$
 
-求解过程并不复杂，这里我给出最终结果：
+求解过程不复杂，最终结果如下：
 
 $$
 \hat \beta = \frac{\sum_i^N w_i x_i y_i - \frac{\sum_i^N w_i y_i \cdot \sum_i^N w_i x_i}{\sum_i^N w_i}}
@@ -78,21 +66,29 @@ $$
 {\sum_i^N w_i}
 $$
 
-*Note: 很多博客为了简洁，喜欢用其它符号替代，但我更喜欢这样写在一起（除非参数非常多），这样更能理解线性回归参数和数据的关系。*
+*Note: 这里用其它符号替代减缓，这样写在一起更能理解线性回归参数和数据的关系。*
 
-## 3 实际例子
+大部分博客对加权线性回归的重点关注参数估计，对加权影响参数检验的关注不够。权重代表数据点的重要性，在加权凸显部分数据的重要性时，这也会影响后续的参数显著性检验。我在实际应用（以`lm()`为例）分析数据的过程，发现加权可能导致假阳性，或者使参数检验的结果偏保守。
 
-我参考的加权线性回归博客大部分到参数求解就结束了，对于线性回归中的显著性检验讨论甚少，至于为什么使用推荐的权重，为什么常用反向方差加权，这些问题一直困扰着我。下面我用两个数值例子阐述**不加劝和不正确加权**可能导致的问题、以及为什么加权线性回归中常用方差的倒数($1/\sigma^2$)进行加权，何种情况需要使用其它类型的权重？
+## 两个影响显著性检验的加权案例
 
-### 3.1 ‘比例数值’ 回归
+### 1. ‘比例’ 回归案例
 
-**场景：**有两个服从正态分布的随机变量 $X$ 和 $Y$，还有一组观测数据 $U$ （非随机变量，确定值），需要对 Y/U 和 $X/U$ 进行线性回归。
+**场景：**自变量服从独立同正态分布 $(x_1,x_2,\cdots,x_n)$，因变量也服从独立同正态分布 $(y_1,y_2,\cdots,y_n)$，还有一组观测数据 $(u_1,u_2,\cdots,u_n)$ （非随机变量，确定值），需要对 $y_i/u_i$ 和 $x_i/u_i$ 进行线性回归，并对斜率进行统计检验。
 
-这里我模拟了三种线性模型进行估计，包括一般线性回归1、 加权线性回归2($\lvert U\rvert$) 和加权线性回归3($U^2$)。我简单地列举了它们的相关参数以及统计推断的结果 (代码见下方)：
+**模拟零假设**：模拟不相关的 $X$ 和 $Y$，因此理论上 $Y/U$ 和 $X/U$ 也不相关。
 
-|                         斜率 $\beta$                         |                        截距 $\theta$                         |                       斜率的P值统计量                        |
-| :----------------------------------------------------------: | :----------------------------------------------------------: | :----------------------------------------------------------: |
-| ![image-20241205225712499](../assets/images/加权线性回归/image-20241205225712499.png) | ![image-20241205225826550](../assets/images/加权线性回归/image-20241205225826550.png) | ![image-20241205225832571](../assets/images/加权线性回归/image-20241205225832571.png) |
+**结果比较**：比较不同权重 (包括 model1:一般线性回归、 model2: 加权线性回归2($\lvert u_i\rvert$) 和 model 3: 加权线性回归3($u_i^2$)) 下的斜率估计值和P值统计量：
+
+斜率：
+
+![image-20241205225712499](2024-12-05-%E5%8A%A0%E6%9D%83%E7%BA%BF%E6%80%A7%E5%9B%9E%E5%BD%92.assets/image-20241205225712499.png)
+
+斜率对应的P值统计量：
+
+![image-20241205225832571](2024-12-05-%E5%8A%A0%E6%9D%83%E7%BA%BF%E6%80%A7%E5%9B%9E%E5%BD%92.assets/image-20241205225832571.png)
+
+**模拟代码**：
 
 ```R
 set.seed(0)
@@ -119,7 +115,6 @@ for(i in seq(1000)){
 }
 
 boxplot(Data1$beta,Data2$beta,Data3$beta)
-boxplot(Data1$theta,Data2$theta,Data3$theta)
 
 Expected = sort(-log10(seq(1000)/1000))
 plot(c(Expected,Expected,Expected),
@@ -194,7 +189,7 @@ abline(b=1,a=0)
 
 ```
 
-## 4. 如何有效加权？
+## 4 如何有效加权？
 
 加权线性回归提出就是为了优先拟合某些观测更准确的点，但权重该如何决定? 哪种权重（确保统计推断时）有效？对于权重的类型多种多样，这个可以根据实际情况自行决定，**这里我们主要讨论如何加权可以确保最终统计分析的有效性。**
 
