--- a/_posts/2024-12-05-加权线性回归.md
+++ b/_posts/2024-12-05-加权线性回归.md
@@ -82,11 +82,11 @@ $$
 
 斜率：
 
-![image-20241205225712499](2024-12-05-%E5%8A%A0%E6%9D%83%E7%BA%BF%E6%80%A7%E5%9B%9E%E5%BD%92.assets/image-20241205225712499.png)
+![image-20241205225712499](../assets/images/加权线性回归/image-20241205225712499.png)
 
 斜率对应的P值统计量：
 
-![image-20241205225832571](2024-12-05-%E5%8A%A0%E6%9D%83%E7%BA%BF%E6%80%A7%E5%9B%9E%E5%BD%92.assets/image-20241205225832571.png)
+![image-20241205225832571](../assets/images/加权线性回归/image-20241205225832571.png)
 
 **模拟代码**：
 
