--- a/_posts/2024-12-05-加权线性回归.md
+++ b/_posts/2024-12-05-加权线性回归.md
@@ -74,19 +74,23 @@ $$
 
 ### 1. ‘比例’ 回归案例
 
-**场景：**自变量服从独立同正态分布 $(x_1,x_2,\cdots,x_n)$，因变量也服从独立同正态分布 $(y_1,y_2,\cdots,y_n)$，还有一组观测数据 $(u_1,u_2,\cdots,u_n)$ （非随机变量，确定值），需要对 $y_i/u_i$ 和 $x_i/u_i$ 进行线性回归，并对斜率进行统计检验。
+**场景：**自变量服从独立同正态分布 $(x_1,x_2,\cdots,x_n)$，因变量也服从独立同正态分布 $(y_1,y_2,\cdots,y_n)$，还有一组观测数据 $(u_1,u_2,\cdots,u_n)$ （非随机变量，确定值），需要对 $y_i/ u_i$ 和 $x_i/u_i$ 进行线性回归，并对斜率进行统计检验。
 
-**模拟零假设**：模拟不相关的 $X$ 和 $Y$，因此理论上 $Y/U$ 和 $X/U$ 也不相关。
+**模拟零假设**：模拟 $y_i = 0\cdot x_i + \epsilon$，因此理论上 $y_i / u_i$ 和 $x_i / u_i$ 也不相关。
 
-**结果比较**：比较不同权重 (包括 model1:一般线性回归、 model2: 加权线性回归2($\lvert u_i\rvert$) 和 model 3: 加权线性回归3($u_i^2$)) 下的斜率估计值和P值统计量：
+**结果比较**：比较不同权重模型，包括 
+
+- model 1:一般线性回归；
+- model 2: 各数据点权重为 $\lvert u_i\rvert$；
+- model 3: 各数据点权重为 $u_i^2$。
 
 斜率：
 
-![image-20241205225712499](../assets/images/加权线性回归/image-20241205225712499.png)
+![image-20241205225712499](../assets/images/2024-12-05-加权线性回归/image-20241205225712499.png)
 
-斜率对应的P值统计量：
+斜率对应的P值 Q-Q 图：
 
-![image-20241205225832571](../assets/images/加权线性回归/image-20241205225832571.png)
+![image-20241205225832571](../assets/images/2024-12-05-加权线性回归/image-20241205225832571.png)
 
 **模拟代码**：
 
@@ -129,22 +133,34 @@ legend("topleft", # 图例位置
 abline(b=1,a=0)
 ```
 
-### 3.2 随机分布的因变量和自变量
+### 2. 随机因变量和自变量
 
-**场景：**上个例子我们假设所有（自变量和因变量）数据都是来自独立同分布的正态分布，但实际由于数据来源不同，观测数据可能服从不同的正态分布，假设有 $N$ 个观测数据 $(x_i,y_i)$，每个观察数据都来自于不同的正态分布，即 
-
+**场景：**观测数据可能是对某个真实场景的估计结果，比如 $N$ 个观测数据 $(\hat x_i,\hat y_i)$，每个观察数据都来自于不同的正态分布，即 
 $$
-x_i \sim N(\overline x_i,\sigma^2_{xi}),y_i \sim N(\overline y_i,\sigma^2_{yi}),i =1,2,\cdots,N
+\hat x_i \sim N(x_i,\sigma^2_{xi}),\hat y_i \sim N(y_i,\sigma^2_{yi}),i =1,2,\cdots,N
 $$
 
+需要对 $\hat y_i$ 和 $\hat x_i$ 进行线性回归，并对斜率进行统计检验。
 
-这里我同样模拟了三种线性模型进行估计，包括一般线性回归1、 加权线性回归2($\lvert \sigma_{yi}\rvert ^{-1}$) 和加权线性回归3($1/\sigma_{yi}^2$)。我简单地列举了它们的相关参数以及统计推断的结果 (代码见下方)：
+**模拟零假设**：模拟 $y_i = 0\cdot x_i + \epsilon$
 
-|                         斜率 $\beta$                         |                        截距 $\theta$                         |                       斜率的P值统计量                        |
-| :----------------------------------------------------------: | :----------------------------------------------------------: | :----------------------------------------------------------: |
-| ![image-20241205225840306](../assets/images/加权线性回归/image-20241205225840306.png) | ![image-20241205225843776](../assets/images/加权线性回归/image-20241205225843776.png) | ![image-20241205225847069](../assets/images/加权线性回归/image-20241205225847069.png) |
+**结果比较**：比较不同权重模型，包括 
 
-这里模拟的是20个样本量，200个样本量似乎样本量足够，不同模型没有区别。
+- model 1:一般线性回归；
+- model 2: 各数据点权重为 $\lvert \sigma_{yi}\rvert ^{-1}$；
+- model 3: 各数据点权重为 $\sigma_{yi}^{-2}$。
+
+斜率：
+
+![image-20241205225840306](../assets/images/2024-12-05-加权线性回归/image-20241205225840306.png)
+
+斜率对应的P值 Q-Q 图：
+
+![image-20241205225847069](../assets/images/2024-12-05-加权线性回归/image-20241205225847069.png)
+
+**模拟代码**：
+
+*Note: 这里模拟的是20个样本量，200个样本量似乎样本量足够，不同模型没有区别。*
 
 ```R
 set.seed(0)
@@ -173,7 +189,6 @@ for(i in seq(1000)){
 }
 
 boxplot(Data1$beta,Data2$beta,Data3$beta)
-boxplot(Data1$theta,Data2$theta,Data3$theta)
 
 Expected = sort(-log10(seq(1000)/1000))
 plot(c(Expected,Expected,Expected),
