--- a/_posts/2024-12-18-Abstract.md
+++ b/_posts/2024-12-18-Abstract.md
@@ -59,7 +59,7 @@ Results
 
 Conclusions
 
-### Non-structured abstract
+### Non-structured abstract (Common used)
 
 USE Signal words, like 
 
@@ -75,7 +75,7 @@ Conclusions: Our finding suggest / show /confirm that
 
 ## Standard of a good abstract
 
-informative 
+### informative 
 
 corresponding with the text
 
@@ -85,7 +85,7 @@ emphasize the new and important aspects of the study
 
 
 
-Clear
+### Clear
 
 no reference, figures or tables; no abbreviations of jargons
 
@@ -95,45 +95,49 @@ use short, simple sentences
 
 
 
-Concise
+### Concise
 
 length: Most abstracts are often too long: < 250 words
 
 examine each word; make sure each word is necessary
 
-Achieving conciseness
+
+
+**Achieving conciseness**
 
 Introductions/purpose: 1 short sentence
 
 Put objective as imperative style:
 
-Objective: to evaluate whether zinc supplementation during pregnancy affects infant birth measures.
+**Objective**: to evaluate whether zinc supplementation during pregnancy affects infant birth measures.
 
-Methods, Restuls: 2-4 sentences
+**Methods, Results**: 2-4 sentences
 
-Conclusion: 1-2 sentences
-
-
-
-Technical details
-
-Tenses in Abstract
-
-1. The objectives part
-   - introducing background information: mostly simple **present tense**, some times **simple perfect tense**
-   - stating objectives: past tense
-2. Methods and results part: **past tense**
-3. Conclusion part: **mostly present tense**
+**Conclusion**: 1-2 sentences
 
 
 
-Recognizing the “Stock Phrases”
+## Technical details
+
+### Tenses in Abstract
+
+The objectives part
+- introducing background information: mostly simple **present tense**, some times **simple perfect tense**
+- stating objectives: past tense
+
+Methods and results part: **past tense**
+
+Conclusion part: **mostly present tense**
+
+
+
+### Recognizing the “Stock Phrases”
 
 stock phrases — standard phrases that are frequently used in research articles (such as SCI papers) published in journals.
 
 
 
-Using Abbreviations
+### Using Abbreviations
 
 When to use it?
 
