--- a/_posts/2024-12-20-Results.md
+++ b/_posts/2024-12-20-Results.md
@@ -1,6 +1,6 @@
 ---
 title: Results
-description: Results are general statements that interpret data.
+description: Results are general statements that interpret data. Data are facts, often numbers that are used to support results.
 author: tangb
 date: 2024-12-20 15:33:00 +0800
 categories: [Writing, Subsections]
@@ -10,18 +10,6 @@ math: true
 mermaid: true
 ---
 
-## Results 
-
-Content
-
-Big picture:
-
-Results
-
-Important data
-
-
-
 Types of Data
 
 - Raw data: actual number found
@@ -30,162 +18,131 @@ Types of Data
 
 
 
-Results and Data
+## Orgnization
 
-Results are general statements that interpret data.
+**Oganizing Principles**: Report results only pertinent to the research question(s). Include the most important data.
 
-Data are facts, often numbers that are used to support results.
-
-
-
-### Orgnization
-
-Oganizing Principles: 
-
-**Report results only pertinent to the research question(s).**
-
-Include the most important data.
-
-
-
-Order of Results
-
-Consistent with the order in the Methods
+**Order of Results**: Consistent with the order in the Methods
 
 For the whole Results —
 
-​	Chronological order
+- Chronological order
 
-​	By the types of the information
+- By the types of the information
+
 
 Within each subsection —
 
-​	Most important — least important results.
+- Most important — least important results.
+
+
+
+## Technical Details
+
+**Tenses**: Mostly past tense. exception: **present tense for presenting results in tables or figures**
 
 
 
 ### Guiding principles
 
-1. be clear
+Be clear
 
-   main results in text, data in tables and/or illustrations.
+- main results in text, data in tables and/or illustrations.
 
-2. Be brief 
+Be brief 
 
-   data should be kept to a minimum in the text.
+- data should be kept to a minimum in the text.
 
-3. Highlighting the most important message
+Highlighting the most important message
 
-   **important results first** 
-
-   avoid using a figure legend or a table title as a topic sentence.
-
-
-
-### Technical Details
-
-Tenses
-
-Mostly past tense
-
-exception: **present tense for presenting results in tables or figures**
+- important results first 
+- avoid using a figure legend or a table title as a topic sentence.
 
 
 
 ### Stock phrases
 
-- **Stock phrases to describe significant differences:** 
+**Stock phrases to describe significant differences:** 
 
-  There were no significance differences between …
+- There were no significance differences between …
 
-  No significant difference was found among …
+- No significant difference was found among …
 
-  … differ significantly 
+- … differ significantly 
 
-  was significantly lower than 
+- was significantly lower than 
 
-  was significantly higher compared with …
+- was significantly higher compared with …
 
-  was significantly higher … versus …
+- was significantly higher … versus …
 
-  was not significantly different from …
+- was not significantly different from …
 
-- Stock phrases to describe increase/decrease: 
+**Stock phrases to describe increase/decrease:** 
 
-  were increased/decreased 
+- were increased/decreased 
 
-  there was an increase/ a decrease in …
+- there was an increase/ a decrease in …
 
-  increased/decreased from … to …
+- increased/decreased from … to …
 
-  An increase was found/observed.
+- An increase was found/observed.
 
-- **Tables and illustrations**
+**Tables and illustrations**
 
-  When to use them?
+- When to use them?
 
-  The rule: be informative 
+- The rule: be informative 
 
-  In either ONE way: text, table, figure, NO REFETITION
-
-- **Tables**
-
-  When to use?
-
-  ONLY when repetitive data must be presented 
-
-- **Principles for arranging tabular material**
-
-  Three horizontal lines but no vertical lines
-
-  Like elements read down, not across
-
-  Words in a column are lined up on the left, numbers on the right
-
-- **Checklist**
-
-  Tables are numbered in the order that are cited in the text.
-
-  Data in the table are consistent with the pertinent text.
-
-  The format of the table follows the “instruction to authors.”
-
-  The format of the table matches the format of the tables published in your target journal.
+- In either ONE way: text, table, figure, NO REFETITION
 
 
 
-**Effective illustrations**
+**Tables**
 
-When to use ?
+- When to use?
 
-For accurate data, TABLE.
+- ONLY when repetitive data must be presented 
 
-For pronounced trends, GRAPH.
 
- 
 
-What is illustration?
+**Principles for arranging tabular material**
 
-An image or graphic portrayal of methods or data in a scientific paper. Types of illustrations include *graphs, diagrams, flow charts, photographs, radiographs*
+- Three horizontal lines but no vertical lines
+
+- Like elements read down, not across
+
+- Words in a column are lined up on the left, numbers on the right
+
+
+
+**Checklist**
+
+- Tables are numbered in the order that are cited in the text.
+
+- Data in the table are consistent with the pertinent text.
+
+- The format of the table follows the “instruction to authors.”
+
+- The format of the table matches the format of the tables published in your target journal.
+
+
+
+### Effective illustrations
+
+**When to use ?**
+
+- For accurate data, TABLE.
+
+- For pronounced trends, GRAPH.
+
+
+**What is illustration?**
+
+- An image or graphic portrayal of methods or data in a scientific paper. Types of illustrations include *graphs, diagrams, flow charts, photographs, radiographs*
 
 
 
 ### Three common figure types
 
-Bar graph
-
-Line graph
-
-Photograph
-
-
-
-Bar Graph
-
-Line graph
-
-Consists of lines, words, and symbols but no photograph.
-
-Line graph
-
-Legends
+Bar graph, Line graph, Photograph, Bar Graph, Line graph, Consists of lines, words, and symbols but no photograph.
