--- a/_posts/2024-12-22-Methods.md
+++ b/_posts/2024-12-22-Methods.md
@@ -10,90 +10,80 @@ math: true
 mermaid: true
 ---
 
+### Proper Heading of “Methods”: 
 
+- Materials and Methods
 
-Purpose 
+- Subjects and Methods
 
-To provide sufficient details of the procedure to enable the interested readers to repeat your experiment.
-
-For readers to assess the validity of your research results and conclusion.
-
-
-
-### Proper Heading of “Methods”
-
-Materials and Methods
-
-Subjects and Methods
-
-Patients and Methods
+- Patients and Methods
 
 
 
-Contents of the Method
 
-Basic components of METHODS
+### Contents of the Method
 
-Materials — What or who was used for this study?
+- Basic components of METHODS
 
-Methods — How was the study done?
+- Materials — What or who was used for this study?
+
+- Methods — How was the study done?
 
 
 
-Guiding principles
 
-1. Clarity 
+**Guiding principles**
 
-   Highlight the most important or new methods.
+**Clarity** 
 
-   in clear order
+- Highlight the most important or new methods.
 
-   Use both visual and verbal signals
+- in clear order
 
-2. Detailed presentation
+- Use both visual and verbal signals
 
-   Detailed as a cookbook
+**Detailed presentation**
+
+- Detailed as a cookbook
 
 
 
 ### Technical details
 
-1. Tenses
+**Tenses**
 
-   Mostly past tense to present the procedure done
+- Mostly past tense to present the procedure done
+- Exception: present tense
+  - to describe data: e.g., Data are presented as menas +- SD.
+  - to cite existing knowledge of facts
 
-   Exception: present tense
+**Point of view**
 
-   1. to describe data: e.g., Data are presented as menas +- SD.
-   2. to cite existing knowledge of facts
+- The point of view of the experimenters  
 
-2. Point of view
-
-   The point of view of the experimenters  
-
-   The point of view of the experitments
+- The point of view of the experitments
 
 
 
 ### Stock phrases
 
-1. Selection of patients, subjects, healthy volunteers, animals
+**Selection of patients, subjects, healthy volunteers, animals**
 
-   A total of 169 patients were included in the study, ….
+- A total of 169 patients were included in the study, ….
 
-   Patients with significant mitral or aortic valvular diseases were excluded.
+- Patients with significant mitral or aortic valvular diseases were excluded.
 
-2. Classification of subjects, patients, healthy volunteers, animals
+**Classification of subjects, patients, healthy volunteers, animals**
 
-   were divided in to three groups: 
+- were divided in to three groups: 
 
-   we randomized 60 patients…
+- we randomized 60 patients…
 
-3. Age 
+**Age** 
 
-   aged 51+2(mean + SEM) years.
+- aged 51+2(mean + SEM) years.
 
-   mean age 45.6 years; range, 29 to 70 years. 
+- mean age 45.6 years; range, 29 to 70 years. 
 
 
 
